# ECRad_core

./: .cproject  .gitignore  .project  ECRad_env.yml  ECRad_submit.bsub  README.md  build.sh  build.tcsh  build_imas.sh  build_msucle3.sh  build_muscle3.sh  compile_ECRad  compile_ECRad_python.sh  compile_ECRad_python_gfortran.sh  conda_build_config.yaml  config_iter_sdcc.sh  ecrad_req_fields.yml  gmakefile  imakefile  makefile  meta.yaml  pyproject.toml  quadrature.mod  recipe.yaml  recompile_ECRad  ripple3d.mod  run_ece  set_environment.sh  set_environment.tcsh  setup.cfg  time_compute.py  update_fit_ode_pack.sh
Fitpack_ODEpack_makefiles/: makefile_odepack
fitpack/: .gitignore  Makefile  bispeu.f  bispev.f  fitpack_license  imakefile  makefile  parder.f  pardeu.f  regrid.f  splder.f  splev.f  splint.f  splint_fitpack.f
fitpack_static/: license
input/: code_params.xml  code_params.xsd  input_chease.xml  scenario.yaml  standalone.xml  standalone.xsd
iwrap/: ecrad.yaml  torbeam.yaml
muscle3_test/: configuration.ymmsl  debug_configuration.ymmsl
odepack/: .gitignore  Makefile  blkdta000.f  gmakefile  imakefile  intdy.f  lsoda.f  prja.f  solsy.f  srcma.f  stoda.f  xerrwv.f  xsetf.f  xsetun.f  zvode.f
odepack_static/: .gitignore  blkdta000.f  lsoda.f  srcma.f  vode.f  xsetun.f
references/: ECRad.bib  PrimaryModel.bib  ScondaryModel.bib
src/: Copy of mod_ecfm_refr_raytracef90  ECRad.f90  ECRad_IMAS.f90  ECRad_MUSCLE3.f90  ECRad_python.f90  ECRad_pythonOMP.f90  ECRad_pythonOMPUSE3D.f90  ECRad_pythonUSE3D.f90  ECRad_python_3D.f90  ECRad_python_3D_extension.f90  (+40 more)
(+8 files in other folders)
