[metadata]
name = ecrad_core
version = 1.0.21
author = Severin S. Denk
author_email = arewedreamingcode@gmail.com
description = Physics core of the Electron Cyclotron Radation transport code for Advanced Data analysis (ECRad)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AreWeDreaming/ECRad_core
project_urls =
    Bug Tracker = https://github.com/AreWeDreaming/ECRad_core/issues
classifiers =
    Programming Language :: Fortran90
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src